--- a/themes/src/styles/home.scss
+++ b/themes/src/styles/home.scss
@@ -1,3 +1,3 @@
 .under-construction {
-  background: image("themes/images/Under-construction.png");
+  background: url("../../static/themes/images/Under-construction.png");
 }
