--- a/themes/src/styles/home.scss
+++ b/themes/src/styles/home.scss
@@ -1,3 +1,4 @@
-.under-construction {
-  background: url("../../static/themes/images/Under-construction.png");
+body {
+  background: url("../images/Under-construction.png") center;
+  background-size: contain;
 }
