--- a/themes/templates/themes/work_in_progress/under_construction.html
+++ b/themes/templates/themes/work_in_progress/under_construction.html
@@ -1,6 +1,6 @@
-{#{% extends "base.html" %}#}
+{% extends "base.html" %}
 
-{% load i18n %}
+{% load i18n staticfiles sekizai_tags%}
 
 {% block content %}
 
