--- a/themes/templates/base.html
+++ b/themes/templates/base.html
@@ -15,5 +15,5 @@
 {% block content %} {% endblock %}
 
 {% block footer %}
-    <div class="h2"> Welcome to this Website</div>
+    <div class="glyphicon-text-background"> </div>
 {% endblock %}
