--- a/themes/templates/themes/work_in_progress/under_construction.html
+++ b/themes/templates/themes/work_in_progress/under_construction.html
@@ -5,7 +5,25 @@
 {% block content %}
 
     <div class="under-construction">
-        {% trans "Under Construction" %}
+      &nbsp;
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <address>
+                    <strong>{% trans 'For more information:' %}</strong><br>
+                    Amsterdam,<br>
+                    The Netherlands<br>
+                    <abbr title="Phone">P:</abbr> (+31) 646837739
+                </address>
+
+                <address>
+                    <strong>{% trans "Contact" %}</strong><br>
+                    <a href="mailto:#">webmaster@mutale.nl</a>
+                </address>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
